function(build_example)
  set(source_file ${ARGV0})
  get_filename_component(bin_name "${source_file}" NAME_WLE)
  add_executable(${bin_name} ${source_file})
  target_link_libraries(${bin_name} qcat)
  install(TARGETS ${bin_name})
endfunction()

build_example(PlotSliceImage.c)
build_example(calculateSSIM.c)
build_example(changeDataSize.c)
build_example(compareData.c)
build_example(compressQuantBins.c)
build_example(computeDataAutoCorrelation.c)
build_example(computeDataPDF.c)
build_example(computeErrAutoCorrelation.c)
build_example(computeErrPDF.c)
build_example(convertBytesToTxtDouble.c)
build_example(convertBytesToTxtFloat.c)
build_example(convertDataToLogDouble.c)
build_example(convertDataToLogFloat.c)
build_example(convertDataType.c)
build_example(convertDoubleToFloat.c)
build_example(convertEndianType.c)
build_example(convertFloatToDouble.c)
build_example(convertTxtToBytesDouble.c)
build_example(convertTxtToBytesFloat.c)
build_example(extractSliceFrom3D.c)
build_example(generateRandomData.c)
build_example(generateRandomData2.c)
build_example(predCR.c)
build_example(printProperty.c)
build_example(simSZ.c)
build_example(splitComplexData.c)
