AUTOMAKE_OPTIONS=foreign
AM_CFLAGS = -I../qcat/include

bin_PROGRAMS=changeDataSize generateRandomData generateRandomData2 convertBytesToTxtFloat convertBytesToTxtDouble splitComplexData convertDataToLogDouble convertTxtToBytesDouble convertTxtToBytesFloat PlotSliceImage convertFloatToDouble convertDoubleToFloat compareData

changeDataSize_SOURCES=changeDataSize.c
changeDataSize_LDADD=../qcat/.libs/libqcat.a -lm
generateRandomData_SOURCES=generateRandomData.c
generateRandomData_LDADD=../qcat/.libs/libqcat.a -lm
generateRandomData2_SOURCES=generateRandomData2.c
generateRandomData2_LDADD=../qcat/.libs/libqcat.a -lm
convertBytesToTxtFloat_SOURCES=convertBytesToTxtFloat.c
convertBytesToTxtFloat_LDADD=../qcat/.libs/libqcat.a -lm
convertBytesToTxtDouble_SOURCES=convertBytesToTxtDouble.c
convertBytesToTxtDouble_LDADD=../qcat/.libs/libqcat.a -lm
splitComplexData_SOURCES=splitComplexData.c
splitComplexData_LDADD=../qcat/.libs/libqcat.a -lm
convertDataToLogDouble_SOURCES=convertDataToLogDouble.c
convertDataToLogDouble_LDADD=../qcat/.libs/libqcat.a -lm
convertTxtToBytesDouble_SOURCES=convertTxtToBytesDouble.c
convertTxtToBytesDouble_LDADD=../qcat/.libs/libqcat.a -lm
convertTxtToBytesFloat_SOURCES=convertTxtToBytesFloat.c
convertTxtToBytesFloat_LDADD=../qcat/.libs/libqcat.a -lm
PlotSliceImage_SOURCES=PlotSliceImage.c
PlotSliceImage_LDADD=../qcat/.libs/libqcat.a -lm
convertFloatToDouble_SOURCES=convertFloatToDouble.c
convertFloatToDouble_LDADD=../qcat/.libs/libqcat.a -lm
convertDoubleToFloat_SOURCES=convertDoubleToFloat.c
convertDoubleToFloat_LDADD=../qcat/.libs/libqcat.a -lm
compareData_SOURCES=compareData.c
compareData_LDADD=../qcat/.libs/libqcat.a -lm
